--- a/geobase/geo-base.tex
+++ b/geobase/geo-base.tex
@@ -23,9 +23,11 @@
 % pagestyles
 %--------------------------------------------------------------------------------------------------------------
 
+\graphicspath{{/Users/wombat/nextcloud/ba-geometry/logos/}}
+
 \fancyhf{}
 \fancyhead[L]{Pädagogische Hochschule Heidelberg\\Prof. Dr. Christian Spannagel\\spannagel@ph-heidelberg.de}
-\fancyhead[R]{\includegraphics[height=15mm]{/Users/wombat/nextcloud/img/phhd.eps}}
+\fancyhead[R]{\includegraphics[height=15mm]{phhd.eps}}
 \fancyfoot[C]{Seite \thepage}
 \fancypagestyle{docstyle}{%
    \fancyhf{}
@@ -35,6 +37,8 @@
 
 \setlength{\parskip}{1 em} % fügt Leerzeile zwischen Absätzen ein
 \setlength{\parindent}{0 em}
+
+
 
 
 %--------------------------------------------------------------------------------------------------------------
@@ -149,7 +153,7 @@ Die Kongruenzsätze kann man auch beweisen; das machen wir im Master, hier setze
 
 %\newpage
 \vspace*{10mm}
-\includegraphics[height=10mm]{/Users/wombat/nextcloud/img/licenses/cc-by-sa.png}
+\includegraphics[height=10mm]{cc-by-sa.png}
 
 \tiny{This document is subject to the Creative Commons Attribution Share-Alike 4.0 International (CC BY-SA 4.0) License.
 \\ To create this document, I used \LaTeX{}.
