--- a/geobase/geo-base.tex
+++ b/geobase/geo-base.tex
@@ -18,12 +18,11 @@
 \usepackage[singlespacing]{setspace}
 \usepackage[plainpages=false,pdfborder={0 0 0}]{hyperref}
 \newcommand{\inlinequote}[2]{\glqq{}#1\grqq{} #2}
+\graphicspath{{/Users/wombat/nextcloud/ba-geometry/logos/}}
 
 %--------------------------------------------------------------------------------------------------------------
 % pagestyles
 %--------------------------------------------------------------------------------------------------------------
-
-\graphicspath{{/Users/wombat/nextcloud/ba-geometry/logos/}}
 
 \fancyhf{}
 \fancyhead[L]{Pädagogische Hochschule Heidelberg\\Prof. Dr. Christian Spannagel\\spannagel@ph-heidelberg.de}
@@ -153,14 +152,14 @@ Die Kongruenzsätze kann man auch beweisen; das machen wir im Master, hier setze
 
 %\newpage
 \vspace*{10mm}
-\includegraphics[height=10mm]{cc-by-sa.png}
+\includegraphics[height=10mm]{cc-zero.png}
 
-\tiny{This document is subject to the Creative Commons Attribution Share-Alike 4.0 International (CC BY-SA 4.0) License.
-\\ To create this document, I used \LaTeX{}.
+\tiny{This document is subject to the Creative Commons Zero (CC0) License.
+\\ To create this document, we used \LaTeX{}.
 
 Christians Social Media Kanäle:\\
 Bluesky: \url{https://bsky.app/profile/cspannagel.bsky.social}\\
-Discord: \url{https://discord.com/invite/WYgECstu7T}\\
+Discord: \url{https://tinyurl.com/chrisp-discord}\\
 Facebook: \url{https://www.facebook.com/chr.spannagel}\\
 Instagram: \url{https://www.instagram.com/dunkelmunkel/}\\
 LinkedIn: \url{https://www.linkedin.com/in/christian-spannagel-31b7b4a1/}\\
@@ -173,7 +172,6 @@ Threads: \url{https://www.threads.net/@dunkelmunkel}\\
 Twitch: \url{https://www.twitch.tv/cspannagel}\\
 X/Twitter: \url{https://twitter.com/dunkelmunkel}\\
 Youtube: \url{https://www.youtube.com/pharithmetik}}\\
-
 
 %\pagestyle{docstyle}
 \end{document}
