--- a/geobase/geo-base.tex
+++ b/geobase/geo-base.tex
@@ -158,6 +158,7 @@ Die Kongruenzsätze kann man auch beweisen; das machen wir im Master, hier setze
 \\ To create this document, we used \LaTeX{}.
 
 Christians Social Media Kanäle:\\
+BeReal: \url{https://bere.al/cspannagel}\\
 Bluesky: \url{https://bsky.app/profile/cspannagel.bsky.social}\\
 Discord: \url{https://tinyurl.com/chrisp-discord}\\
 Facebook: \url{https://www.facebook.com/chr.spannagel}\\
