--- a/02-beweisen/02-beweisen.tex
+++ b/02-beweisen/02-beweisen.tex
@@ -1,42 +1,4 @@
-\documentclass[12pt,a4paper,oneside,ngerman]{article}
-%\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[default]{raleway}
-\usepackage[a4paper, left=25mm, right=25mm, top=30mm, bottom=25mm, headheight=30mm]{geometry}
-%\usepackage{csquotes}
-\usepackage{ngerman}
-\usepackage{textcomp}
-\usepackage{comment}
-\usepackage{enumerate}
-\usepackage{graphicx}
-\usepackage{fancyhdr}
-\usepackage{epstopdf}
-\usepackage{titling}
-\usepackage[backend=biber,style=apa]{biblatex}
-\DeclareFieldFormat{apacase}{#1}
-\DeclareLanguageMapping{ngerman}{ngerman-apa}
-\usepackage[singlespacing]{setspace}
-\usepackage[plainpages=false,pdfborder={0 0 0}]{hyperref}
-\newcommand{\inlinequote}[2]{\glqq{}#1\grqq{} #2}
-\graphicspath{{/Users/wombat/nextcloud/ba-geometry/logos/}}
-
-%--------------------------------------------------------------------------------------------------------------
-% pagestyles
-%--------------------------------------------------------------------------------------------------------------
-
-\fancyhf{}
-\fancyhead[L]{Pädagogische Hochschule Heidelberg\\Prof. Dr. Christian Spannagel\\spannagel@ph-heidelberg.de}
-\fancyhead[R]{\includegraphics[height=15mm]{phhd.eps}}
-\fancyfoot[C]{Seite \thepage}
-\fancypagestyle{docstyle}{%
-   \fancyhf{}
-   \renewcommand{\headrulewidth}{0pt}
-   \fancyfoot[C]{Seite \thepage}
-}
-
-\setlength{\parskip}{1 em} % fügt Leerzeile zwischen Absätzen ein
-\setlength{\parindent}{0 em}
-
+\documentclass{../cssheet}
 
 %--------------------------------------------------------------------------------------------------------------
 % Basic meta data
@@ -45,17 +7,10 @@
 \title{Beweisen}
 \author{Prof. Dr. Christian Spannagel}
 \date{\today}
-\hypersetup{%
-    pdfauthor={\theauthor},%
-    pdftitle={\thetitle},%
-    pdfsubject={Aufgabenblatt Geometrie},%
-    pdfkeywords={geomerie}
-}
+\setsubject{Aufgabenblatt Geometrie}
+\setkeywords{geometrie}
+\setpdfmetadata
 
-%\bibliography{/Users/wombat/data/latex/literatur.bib}
-%\bibliographystyle{plain}
-%\defbibheading{references}[\refname]{\subsection{#1}
-%   \markboth{#1}{#1}}
 
 
 %--------------------------------------------------------------------------------------------------------------
@@ -63,12 +18,7 @@
 %--------------------------------------------------------------------------------------------------------------
 
 \begin{document}
-\pagenumbering{arabic}
-\pagestyle{fancy}
-\begin{center}
-{\LARGE\textbf{\thetitle}}
-\end{center}
-
+\printtitle
 
 \textbf{Aufgabe 1 (Geraden):}  Beweist die folgenden Aussagen aus den Inzidenzaxiomen:
 \begin{enumerate}[a)]
@@ -112,33 +62,11 @@ In dieser Aufgabe sollt ihr die Beziehungen zwischen Seitenlängen und Innenwink
 \item Formuliert die Umkehrung des Satzes aus a) und beweist sie.
 \end{enumerate}
 
+\newpage
+%\vspace*{10mm}
+\printlicense
 
-
-
-%\newpage
-\vspace*{10mm}
-\includegraphics[height=10mm]{cc-zero.png}
-
-\tiny{This document is subject to the Creative Commons Zero (CC0) License.
-\\ To create this document, we used \LaTeX{}.
-
-Christians Social Media Kanäle:\\
-BeReal: \url{https://bere.al/cspannagel}\\
-Bluesky: \url{https://bsky.app/profile/cspannagel.bsky.social}\\
-Discord: \url{https://tinyurl.com/chrisp-discord}\\
-Facebook: \url{https://www.facebook.com/chr.spannagel}\\
-Instagram: \url{https://www.instagram.com/dunkelmunkel/}\\
-LinkedIn: \url{https://www.linkedin.com/in/christian-spannagel-31b7b4a1/}\\
-Mastodon: \url{https://scholar.social/@cspannagel}\\
-Snapchat: \url{https://www.snapchat.com/add/spannagelc}\\
-Telegram: \url{https://t.me/cspannagel}\\
-Tellonym: \url{https://tellonym.me/christian.spannagel}\\
-TikTok: \url{https://www.tiktok.com/@_cspannagel_}\\
-Threads: \url{https://www.threads.net/@dunkelmunkel}\\
-Twitch: \url{https://www.twitch.tv/cspannagel}\\
-X/Twitter: \url{https://twitter.com/dunkelmunkel}\\
-Youtube: \url{https://www.youtube.com/pharithmetik}}\\
-
+\printsocials
 
 %\pagestyle{docstyle}
 \end{document}
