--- a/00-aufgaben-zum-aufwaermen/00_aufgaben_zum_aufwaermen.tex
+++ b/00-aufgaben-zum-aufwaermen/00_aufgaben_zum_aufwaermen.tex
@@ -1,42 +1,4 @@
-\documentclass[12pt,a4paper,oneside,ngerman]{article}
-%\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[default]{raleway}
-\usepackage[a4paper, left=25mm, right=25mm, top=30mm, bottom=25mm, headheight=30mm]{geometry}
-%\usepackage{csquotes}
-\usepackage{ngerman}
-\usepackage{textcomp}
-\usepackage{comment}
-\usepackage{enumerate}
-\usepackage{graphicx}
-\usepackage{fancyhdr}
-\usepackage{epstopdf}
-\usepackage{titling}
-\usepackage[backend=biber,style=apa]{biblatex}
-\DeclareFieldFormat{apacase}{#1}
-\DeclareLanguageMapping{ngerman}{ngerman-apa}
-\usepackage[singlespacing]{setspace}
-\usepackage[plainpages=false,pdfborder={0 0 0}]{hyperref}
-\newcommand{\inlinequote}[2]{\glqq{}#1\grqq{} #2}
-\graphicspath{{/Users/wombat/nextcloud/ba-geometry/logos/}}
-
-%--------------------------------------------------------------------------------------------------------------
-% pagestyles
-%--------------------------------------------------------------------------------------------------------------
-
-\fancyhf{}
-\fancyhead[L]{Pädagogische Hochschule Heidelberg\\Prof. Dr. Christian Spannagel\\spannagel@ph-heidelberg.de}
-\fancyhead[R]{\includegraphics[height=15mm]{phhd.eps}}
-\fancyfoot[C]{Seite \thepage}
-\fancypagestyle{docstyle}{%
-   \fancyhf{}
-   \renewcommand{\headrulewidth}{0pt}
-   \fancyfoot[C]{Seite \thepage}
-}
-
-\setlength{\parskip}{1 em} % fügt Leerzeile zwischen Absätzen ein
-\setlength{\parindent}{0 em}
-
+\documentclass{../cssheet}
 
 %--------------------------------------------------------------------------------------------------------------
 % Basic meta data
@@ -45,32 +7,17 @@
 \title{Aufgaben zum Aufwärmen}
 \author{Prof. Dr. Christian Spannagel}
 \date{\today}
-\hypersetup{%
-    pdfauthor={\theauthor},%
-    pdftitle={\thetitle},%
-    pdfsubject={Aufgabenblatt Geometrie},%
-    pdfkeywords={geomerie}
-}
-
-%\bibliography{/Users/wombat/data/latex/literatur.bib}
-%\bibliographystyle{plain}
-%\defbibheading{references}[\refname]{\subsection{#1}
-%   \markboth{#1}{#1}}
-
+\setsubject{Aufgabenblatt Geometrie}
+\setkeywords{geometrie}
+\setpdfmetadata
 
 %--------------------------------------------------------------------------------------------------------------
 % document
 %--------------------------------------------------------------------------------------------------------------
 
 \begin{document}
-\pagenumbering{arabic}
-\pagestyle{fancy}
-\begin{center}
-\vspace*{5mm}
-{\LARGE\textbf{\thetitle}}
-\end{center}
 
-\vspace*{10mm}
+\printtitle
 
 \textbf{Vorbemerkungen:} 
 \begin{enumerate}
@@ -78,7 +25,6 @@
 \item Bearbeitet die Aufgaben in eurer Lerngruppe, aber ohne dabei irgendwelche Hilfsmittel zu verwenden! Sucht keine Lösungen im Internet, sondern diskutiert in der Gruppe eure Ideen und korrigiert euch gegenseitig. Dieser gemeinsame Prozess voller unterschiedlicher Gedanken, in denen auch Fehler gemacht und korrigiert werden, steckt voller wertvoller Informationen. Ihr erinnert euch dann später, warum ihr bestimmte Ideen verworfen habt und warum ihr euch für andere Ansätze entschieden habt. Wenn ihr einfach nur die Lösungen googelt oder ChatGPT verwendet, beraubt ihr euch selbst dieser wertvollen Informationen.
 \end{enumerate}
 
-\vspace*{10mm}
 
 \textbf{Aufgabe 1 (Vierecke):}  
 \begin{enumerate}[a)]
@@ -94,29 +40,10 @@
 \textbf{Aufgabe 4 (Kaffeesorten):} Was ist ein Cappuccino? Was ein Milchkaffee? Was ein Latte Macchiato? Versucht einmal, die verschiedenen Kaffeegetränke eindeutig zu charakterisieren. Fallen euch weitere Kaffeegetränke ein?
 
 
-%\newpage
 \vspace*{10mm}
-\includegraphics[height=10mm]{cc-zero.png}
+\printlicense
 
-\tiny{This document is subject to the Creative Commons Zero (CC0) License.
-\\ To create this document, we used \LaTeX{}.
-
-Christians Social Media Kanäle:\\
-BeReal: \url{https://bere.al/cspannagel}\\
-Bluesky: \url{https://bsky.app/profile/cspannagel.bsky.social}\\
-Discord: \url{https://tinyurl.com/chrisp-discord}\\
-Facebook: \url{https://www.facebook.com/chr.spannagel}\\
-Instagram: \url{https://www.instagram.com/dunkelmunkel/}\\
-LinkedIn: \url{https://www.linkedin.com/in/christian-spannagel-31b7b4a1/}\\
-Mastodon: \url{https://scholar.social/@cspannagel}\\
-Snapchat: \url{https://www.snapchat.com/add/spannagelc}\\
-Telegram: \url{https://t.me/cspannagel}\\
-Tellonym: \url{https://tellonym.me/christian.spannagel}\\
-TikTok: \url{https://www.tiktok.com/@_cspannagel_}\\
-Threads: \url{https://www.threads.net/@dunkelmunkel}\\
-Twitch: \url{https://www.twitch.tv/cspannagel}\\
-X/Twitter: \url{https://twitter.com/dunkelmunkel}\\
-Youtube: \url{https://www.youtube.com/pharithmetik}}\\
+\printsocials
 
 
 %\pagestyle{docstyle}
