--- a/00-aufgaben-zum-aufwaermen/00_aufgaben_zum_aufwaermen.tex
+++ b/00-aufgaben-zum-aufwaermen/00_aufgaben_zum_aufwaermen.tex
@@ -21,7 +21,7 @@
 
 \textbf{Vorbemerkungen:} 
 \begin{enumerate}
-\item Ein wichtiges didaktisches Grundprinzip ist das Anknüpfen neuer Inhalte an Vorwissen. Ihr bring jede Menge geometrisches Vorwissen aus der Schule mit, aber vielleicht habt ihr das ein oder andere wieder vergessen. Daher ist es wichtig, das Vorwissen zu \emph{aktivieren}. Das ist das Ziel dieser Aufwärm-Aufgaben.
+\item Ein wichtiges didaktisches Grundprinzip ist das Anknüpfen neuer Inhalte an Vorwissen. Ihr bringt jede Menge geometrisches Vorwissen aus der Schule mit, aber vielleicht habt ihr das ein oder andere wieder vergessen. Daher ist es wichtig, das Vorwissen zu \emph{aktivieren}. Das ist Ziel dieser Aufwärm-Aufgaben.
 \item Bearbeitet die Aufgaben in eurer Lerngruppe, aber ohne dabei irgendwelche Hilfsmittel zu verwenden! Sucht keine Lösungen im Internet, sondern diskutiert in der Gruppe eure Ideen und korrigiert euch gegenseitig. Dieser gemeinsame Prozess voller unterschiedlicher Gedanken, in denen auch Fehler gemacht und korrigiert werden, steckt voller wertvoller Informationen. Ihr erinnert euch dann später, warum ihr bestimmte Ideen verworfen habt und warum ihr euch für andere Ansätze entschieden habt. Wenn ihr einfach nur die Lösungen googelt oder ChatGPT verwendet, beraubt ihr euch selbst dieser wertvollen Informationen.
 \end{enumerate}
 
